<resources>
    <string name="app_name">SL_APP</string>
    <string name="title_depart">科室：胆肠镜</string>
    <string name="patient_name_lab">患者姓名：</string>
    <string name="video_time_lab">录像时间：</string>
    <string name="video_time">00:00:00</string>
    <string name="str_set">设置</string>
    <string name="select_patient">选择患者</string>
    <string name="start_video">开始录像</string>
    <string name="stop_video">暂停录像</string>
    <string name="take_picture">拍照</string>
    <string name="full_screen">全屏</string>
    <string name="str_exit">退出</string>
</resources>
