<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    //title

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:layout_weight="2"
        android:gravity="top"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_title_department"
            style="@style/FirstTitleFontTheme"
            android:text="@string/title_depart"
            android:textColor="@color/fntTitleNotice" />

        <TextView
            style="@style/FirstTitleFontTheme"
            android:gravity="right"
            android:text="@string/patient_name_lab"
            android:textColor="@color/fntTitleNormal" />

        <TextView
            android:id="@+id/txt_title_patientName"
            style="@style/FirstTitleFontTheme"
            android:text="BOBO"
            android:textColor="@color/fntTitleNotice" />

        <TextView
            android:id="@+id/txt_title_patientSex"
            style="@style/FirstTitleFontTheme"
            android:gravity="center"
            android:text="男"
            android:textColor="@color/fntTitleNormal" />

        <TextView
            style="@style/FirstTitleFontTheme"
            android:gravity="right"
            android:text="@string/video_time_lab"
            android:textColor="@color/fntTitleNormal" />

        <TextView
            android:id="@+id/txt_title_video_time"
            style="@style/FirstTitleFontTheme"
            android:text="@string/video_time"
            android:textColor="@color/fntTitleNormal" />

        //Select Set按键
        <Button
            android:id="@+id/btn_select_patient"
            style="@style/FirstTitleBtnTheme"
            android:drawableRight="@mipmap/ic_launcher"
            android:text="@string/select_patient"
            android:textColor="@color/fntTitleNormal"
            android:textSize="15sp" />
        <Button
            android:id="@+id/btn_set"
            style="@style/FirstTitleBtnTheme"
            android:drawableRight="@mipmap/ic_launcher"
            android:text="@string/str_set"
            android:textColor="@color/fntTitleNormal"
            android:textSize="15sp" />
    </LinearLayout>
    //分割线
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="center" />

    //body
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="6"
        android:orientation="horizontal">
        //视频播放模块
        <VideoView
            android:id="@+id/videoView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="9" />

        //右侧五个按键
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_start_video"
                style="@style/FirstRightBtnTheme"
                android:drawableTop="@mipmap/ic_launcher"
                android:text="@string/start_video" />
            <Button
                android:id="@+id/btn_stop_video"
                style="@style/FirstRightBtnTheme"
                android:drawableTop="@mipmap/ic_launcher"
                android:text="@string/stop_video"/>
            <Button
                android:id="@+id/btn_take_picture"
                style="@style/FirstRightBtnTheme"
                android:drawableTop="@mipmap/ic_launcher"
                android:text="@string/take_picture"/>
            <Button
                android:id="@+id/btn_full_screen"
                style="@style/FirstRightBtnTheme"
                android:drawableTop="@mipmap/ic_launcher"
                android:text="@string/full_screen"/>
            <Button
                android:id="@+id/btn_exit"
                style="@style/FirstRightBtnTheme"
                android:drawableTop="@mipmap/ic_launcher"
                android:text="@string/str_exit"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="horizontal">
        //显示实时时间

        <TextClock
            android:id="@+id/tc_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bgFirstTitle"
            android:format24Hour ="yyyy.MM.dd HH:mm:ss"
            android:format12Hour ="yyyy.MM.dd HH:mm:ss"
            android:gravity="center"
            android:textColor="@color/fntTitleNormal"
            android:textSize="20sp" />
        //分割线
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="6dp"/>

    </LinearLayout>


</LinearLayout>